[fix] Need a copy to not modify original list
Also unified returned lists to be all unmodifiable

Change-Id: Ia6f695d772123bc73715dfbe609c668c348c3edf
Signed-off-by: Martin Melik Merkumians <melik-merkumians@acin.tuwien.ac.at>